# cabide

./: .gitignore  Cargo.toml  README.md
data/: alunos_head.csv  docentes_head.csv  gh_head.csv
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/cabide/: all.html  enum.Error.html  index.html  sidebar-items.js  static.READ_BLOCKS_COUNT.html  struct.Cabide.html  struct.HashCabide.html  struct.OrderCabide.html
docs/cabide/error/: enum.Error.html
docs/cabide/hash/: struct.HashCabide.html
docs/cabide/order/: struct.OrderCabide.html
docs/cabide/protocol/: constant.BLOCK_SIZE.html  constant.CONTENT_SIZE.html  constant.END_BYTE.html  enum.Metadata.html  index.html  sidebar-items.js
docs/src/bincode/: byteorder.rs.html  error.rs.html  internal.rs.html  lib.rs.html
docs/src/cabide/: lib.rs.html  (+4 more)
examples/: delete_filter_gh.rs  delete_gh.rs  hash_delete.rs  hash_delete_filter.rs  hash_init.rs  hash_insert.rs  hash_insert_multiple.rs  hash_select.rs  hash_select_filter.rs  hash_select_multiple.rs  hash_select_range.rs  heap_delete.rs  heap_delete_filter.rs  heap_init.rs  heap_insert.rs  heap_insert_multiple.rs  heap_select.rs  heap_select_filter.rs  heap_select_multiple.rs  heap_select_range.rs  init_gh.rs  insert_gh.rs  insert_multiple_gh.rs  order_delete.rs  order_delete_multiple.rs  order_init.rs  order_insert.rs  order_insert_multiple.rs  order_select.rs  order_select_multiple.rs  select_filter_gh.rs  select_gh.rs  select_multiple_gh.rs  select_range_gh.rs
src/: error.rs  hash.rs  lib.rs  order.rs  protocol.rs
tests/: select.rs
(+112 files in other folders)
