[package]
name = "cabide"
version = "0.1.0"
authors = ["Paulo Cabral Sanz <paulosanz@poli.ufrj.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.7"
